--- a/sklearn_primer.ipynb
+++ b/sklearn_primer.ipynb
@@ -294,7 +294,7 @@
     "sgd.fit(x_train, y_train)\n",
     "\n",
     "#predict\n",
-    "predicted = clf.predict(x_test)\n",
+    "predicted = sgd.predict(x_test)\n",
     "\n",
     "_, axes = plt.subplots(nrows=1, ncols=4, figsize=(10, 3))\n",
     "for ax, image, prediction in zip(axes, X_test, predicted):\n",
@@ -599,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
