--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 This repo houses tutorials on a range of computational topics.
 
 Feel free to share them as you like.
+
+See the prettier version of all this here: https://jharrisonecoevo.github.io/computing_tutorials/
