--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-This repo houses tutorials on a range of computational topics.
+This repo houses tutorials on a range of computational topics. 
 
-Feel free to share them as you like.
+Feel free to share them as you like. As you can see this repo is not quite ready for public consumption, at some point I may build up the content. 
 
 See the prettier version of all this here: https://jharrisonecoevo.github.io/computing_tutorials/
